@@ -1,3 +1,12 @@
+2000-11-01  John Harper  <jsh@eazel.com>
+
+	* sawfish/wm/ext/edge-flip.jl (before-edge-flip-hook,
+	after-edge-flip-hook): new hooks
+
+	(before-flip, after-flip, edge-flip-while-moving): edge
+	flipping while dragging windows now obeys the edge-flip-delay
+	setting
+
 2000-10-31  John Harper  <jsh@eazel.com>
 
 	* sawfish/wm/state/maximize.jl: added a function to the
